--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -12,25 +12,21 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" >@color/indigo_700</item>
         <!-- Customize your theme here. -->
-
-        <!--        <item name="android:background" >@color/indigo_700</item>-->
-        <!--        <item name="android:background" >@android:color/transparent</item>-->
-
-        <!--        <item name="android:backgroundTint" >@android:color/transparent</item>-->
-        <!--        <item name="android:backgroundTint" >@color/indigo_700</item>-->
+        <item name="bottomSheetDialogTheme">@style/BottomSheetDialog</item>
         <item name="android:navigationBarColor" >@color/indigo_700</item>
         <item name="android:textColor" >@color/gold_100</item>
-        <!--        <item name="android:windowBackground" >@android:color/transparent</item>-->
-
     </style>
-
     <style name="EditTextStyle" parent="Widget.AppCompat.EditText">
         <item name="colorControlActivated">@color/gold_100</item>
     </style>
+    <style name="BottomSheetDialog" parent="@style/ThemeOverlay.MaterialComponents.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/BottomSheet</item>
+        <item name="android:colorBackground">@color/white</item>
+    </style>
 
+    <style name="BottomSheet" parent="Widget.MaterialComponents.BottomSheet.Modal">
+        <item name="backgroundTint">@android:color/transparent</item>
+    </style>
 
-
-
-
-
+h
 </resources>
