--- a/app/src/main/res/layout/fragment_write_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_write_bottom_sheet.xml
@@ -197,7 +197,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="24dp"
-            android:background="@drawable/selector_btn"
+            android:background="@drawable/button_state"
             android:enabled="false"
             android:text="완료"
             android:textColor="@color/white"
