--- a/app/src/main/res/layout/fragment_list_detail.xml
+++ b/app/src/main/res/layout/fragment_list_detail.xml
@@ -178,7 +178,9 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="24dp"
             android:background="@drawable/bg_input"
+            android:maxLines="20"
             android:padding="16dp"
+            android:scrollbars="vertical"
             app:layout_constraintBottom_toTopOf="@+id/btn_share"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.475"
